--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.5",
     "express": "^4.18.2",
     "nodemon": "^2.0.20"
   }
